src/index.css
:root {
  --background: #fff;
  --foreground: #000;
  --money: #58c322;
  --accent: #67e2ea;
}

* {
  box-sizing: border-box;
}

body {
  margin: 0 auto;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--background);
  color: var(--foreground);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

html,
body,
#root {
  height: 100%;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #000;
    --foreground: #fff;
  }
}

